# deep-point-map-compression

./: .gitignore  .gitmodules  Dockerfile  LICENSE  Makefile  README.md  requirements.txt  setup.py
depoco/: evaluate.py  plot_results.py  trainer.py  visualize.py
depoco/architectures/: loss_handler.py  network_blocks.py  original_kp_blocks.py
depoco/config/: depoco.yaml
depoco/config/kitti/: e0.yaml  e1.yaml  e2.yaml  e3.yaml
depoco/data_handling/: VoxelGrid.py  train_test_splitter.py
depoco/datasets/: kitti2voxel.py  submap_handler.py
depoco/evaluation/: evaluator.py  occupancy_grid.py
depoco/experiments/results/kitti/: e0.pkl  e1.pkl  e2.pkl  e3.pkl
depoco/network_files/e0/: dec.pth  dec_best.pth  e0.yaml  enc.pth  enc_best.pth
depoco/network_files/e1/: dec.pth  dec_best.pth  e1.yaml  enc.pth  enc_best.pth
depoco/network_files/e2/: dec.pth  dec_best.pth  e2.yaml  enc.pth  enc_best.pth
depoco/network_files/e3/: dec.pth  dec_best.pth  e3.yaml  enc.pth  enc_best.pth
depoco/notebooks/: visualize.ipynb
depoco/utils/: point_cloud_utils.py  upsampling_rating.py
depoco/utils/visualization/: visualize_layer.py
submodules/octree_handler/: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  setup.py
submodules/octree_handler/src/: CMakeLists.txt  Octree.hpp  OctreeHandler.cpp  OctreeHandler.h
submodules/octree_handler/tests/: octree_cpp_testing.py
